--- a/lab-tunley/Base.lproj/Main.storyboard
+++ b/lab-tunley/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="133" id="cm4-nh-lfm">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="133" id="cm4-nh-lfm" customClass="TrackCell" customModule="lab_tunley" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="133"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cm4-nh-lfm" id="dIt-xd-WXq">
@@ -64,6 +64,11 @@
                                                 <constraint firstAttribute="trailing" secondItem="JdS-gw-2Zc" secondAttribute="trailing" constant="16" id="L5i-HY-yCt"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="artistNameLabel" destination="XEC-dA-NdC" id="efv-9y-XUB"/>
+                                            <outlet property="trackImageView" destination="VTP-Hv-lTl" id="bzD-2T-j9f"/>
+                                            <outlet property="trackNameLabel" destination="8hL-Cb-qyF" id="Ace-J3-sLv"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
